fix project-grid overflowing body

--- a/style.css
+++ b/style.css
@@ -3,10 +3,9 @@
 body{
   display: grid;
   grid-template-columns: 1fr 6fr;
-  grid-template-rows: 1fr 5fr;
+  grid-template-rows: 250px 5fr;
   margin: 0px;
   font-family: 'Roboto', sans-serif;
-  min-height: 100vh;
   overflow: auto;
 }
 
@@ -170,7 +169,7 @@ button:hover{
 .content{
   display: grid;
   grid-template-columns: 3fr 1fr;
-  grid-template-rows: 1fr 2fr;
+  grid-template-rows: 340px 2fr;
   background-color: #CAC4CE;
   height: auto;
   padding-top: 30px;
@@ -179,20 +178,20 @@ button:hover{
 
 .projects{
   display: grid;
-  resize: both;
   grid-template-columns: repeat(auto-fit, minmax(250px, 350px));
-  grid-template-rows: repeat(auto-fit, minmax(200px, 250px));
+  grid-template-rows: repeat(auto-fit, minmax(220px, 250px));
+  grid-auto-rows: minmax(220px, 250px);
   grid-row: 1/3;
   gap: 30px;
   padding: 30px;
+  justify-content: center;
+  height: auto;
 }
 
 .card{
   display: flex;
   flex-direction: column;
   background-color: white;
-  height: 100%;
-  width: 100%;
   border-left: 8px solid #FE4A49;
   border-radius: 10px;
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.205);
@@ -207,6 +206,7 @@ button:hover{
 .project-content{
   margin-left: 10px;
   margin-right: 10px;
+  margin-bottom: 10px;
   color: rgb(80, 79, 79);
 }
 
@@ -214,6 +214,7 @@ button:hover{
   display: flex;
   flex-direction: column;
   margin-right: 30px;
+  min-width: 280px;
 }
 
 .announcements-header{
